--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ name                     : &name "Prof. Frederic Rizk"
 description              : &description "Professor in the Department of Electrical and Computer Engineering at the University of Texas at Tyler"   # Update this with a general description of your site, this is the default if not overridden by a page
 url                      : "https://fredericrizk.github.io" # The base hostname & protocol for your site e.g. "https://[your GitHub username].github.io",
                                                            # or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
-baseurl                  : "" # the subpath of your site, e.g. "/blog"
+baseurl                  : "/CARISET.github.io" # the subpath of your site, e.g. "/blog"
 repository               : "fredericrizk/CARISET.github.io"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
