--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,7 +9,8 @@
 
 main:
   - title: "Publications"
-    url: /publications/
+    #url: /publications/
+     url:"https://scholar.google.com/citations?user=-Sl7kMUAAAAJ"
 
   - title: "Talks"
     url: /talks/    
