--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ repository               : "fredericrizk/CARISET.github.io"
 author:
   # Biographic information
   avatar           : "profilepic.png"
-  name             : "Prof. Frederic Rizk"
+  name             : "Dr. Frederic Rizk"
   pronouns         : # example: "she/her"  
   bio              : "Professor in the Department of Electrical and Computer Engineering at the University of Texas at Tyler"
   location         : "Texas, USA"
