--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ locale                   : "en-US"
 site_theme               : "default" # Currently available options are "default", "air"
 title                    : "CARISET"
 title_separator          : "-"
-name                     : &name "Prof. Frederic Rizk"
+name                     : &name "Dr. Frederic Rizk"
 description              : &description "Professor in the Department of Electrical and Computer Engineering at the University of Texas at Tyler"   # Update this with a general description of your site, this is the default if not overridden by a page
 url                      : "https://fredericrizk.github.io" # The base hostname & protocol for your site e.g. "https://[your GitHub username].github.io",
                                                            # or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
