--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -21,7 +21,7 @@ main:
   - title: "CV"
     url: /files/CV_FredericRizk.pdf
     
-  - title: "Portfolio"
+  - title: "Join us"
     url: /portfolio/
         
   - title: "Blog Posts"
