--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -22,7 +22,7 @@ main:
     url: /files/CV_FredericRizk.pdf
     
   - title: "Join us"
-    url: /portfolio/
+    url: /join-us/
         
   - title: "Blog Posts"
     url: /year-archive/
