--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -21,8 +21,8 @@ main:
   - title: "CV"
     url: /files/CV_FredericRizk.pdf
     
-  - title: "Join us"
-    url: /join-us/
+  - title: "Join Us"
+    url: /pages/
         
   - title: "Blog Posts"
     url: /year-archive/
