--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -24,7 +24,7 @@ main:
   - title: "Join Us"
     url: /pages/join-us/
         
-  - title: "Blog Posts"
+  - title: "People"
     url: /year-archive/
     
 
